noinst_HEADERS=\
	       Log.hpp \
	       Detail.hpp \
	       Address.hpp \
	       BufferedSocket.hpp \
	       DatagramSocket.hpp \
	       EventLoopCTX.hpp \
	       FixedBuffer.hpp \
	       Socket.hpp \
	       SocketProxy.hpp \
	       StreamSocket.hpp \
	       TCPServer.hpp
#EXTRA_DIST

MAINTAINERCLEANFILES=Makefile.in


